--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,9 @@
       <a class="brand" href="{% url manager.views.main %}">Syrup</a>
       <ul class="nav">
         <li class="divider-vertical"></li>
-        <li><a href="{% url manager.views.template_list %}">templates</a></li>
-        <li class="divider-vertical"></li>
         <li><a href="{% url manager.views.node_list %}">items</a></li>
+        <li class="divider-vertical"></li>
+        <li><a href="{% url manager.views.template_list %}">templates</a></li>
         <li class="divider-vertical"></li>
         <li><a href="{% url manager.views.node_table %}">lists</a></li>
         <li class="divider-vertical"></li>
@@ -30,14 +30,14 @@
           <input type="text" class="search-query" name="q" placeholder="Search" />
       </form>
      </div>
-    </div>
+    </div><!--
       <a href="{% url manager.views.main %}"><i class="icon-home"></i></a> &gt;
       <small>
         {% for n in request.session.node_history.get_nodes %}
         <a href="{% url manager.views.node_detail n.id %}">{{n}}</a>
         {% if not forloop.last %} &gt; {% endif %}
         {% endfor %}
-      </small>
+      </small>-->
   </div>
  </div>
  <div class="row-fluid">
