--- a/templates/manager/template_list.html
+++ b/templates/manager/template_list.html
@@ -1,17 +1,18 @@
 {% extends "base.html" %}
 
-{% block pagetitle %}templates{% endblock %}
-{% block header %}Templates{% endblock %}
+{% block pagetitle %}Templates{% endblock %}
+{% block header %}Node types{% endblock %}
 
 {% block content_menu %}
 <a class="btn btn-success btn-small" href="{% url manager.views.template_new %}">Create new template</a>
 {% endblock %}
 
 {% block content %}
-<table class="table table-condensed table-hover">
+<table class="table table-hover">
     {% for node in nodes %}
         <tr>
             <td><a href="{% url manager.views.node_detail node.id %}">{{ node.get_name }}</a></td>
+            <td><p><a href="{% url manager.views.node_new template_id=node.id %}" class="btn btn-primary btn-mini">Create item using this template</a></p></td>
         </tr>
     {% empty %}
         <tr class="warning"><td><i>No templates found.</i></td></tr>
