protect static params, handle multiple params

--- a/templates/manager/item_detail.html
+++ b/templates/manager/item_detail.html
@@ -16,16 +16,27 @@
             <tr class="info">
                 <td><small><span class="muted">t:</span>{{ param.template.get_name }}</small></td>
                 <td><em>{{ param.name }}</em></td>
-                <td><strong><span class="param_edit"
+                <td><strong><span {% if not param.static %}class="param_edit"{% endif %}
                         param_id="{{param.id}}" id="param_id_{{param.id}}"
                         >{{ param.value }}</span></strong></td>
                 <td>
+                  {% if not param.static %}
                     <span class="icon-pencil"
                         onclick="jQuery('#param_id_{{param.id}}').trigger('click');"></span>
+                  {% endif %}
+                  {% if not param.primary and not param.static %}
+                    <a href="{% url manager.views.node_del_param param.id %}" title="delete parameter"><i class="icon-remove"></i></a>
+                  {% endif %}
                 </td>
                 <td>
-                  {% if not param.primary %}
-                    <a href="{% url manager.views.node_del_param param.id %}" title="delete parameter"><i class="icon-remove"></i></a>
+                  {% if param.static %}
+                    <small>(static)</small>
+                  {% endif %}
+                  {% if param.primary %}
+                    <small>(primary)</small>
+                  {% endif %}
+                  {% if param.structural %}
+                    <small>(struct)</small>
                   {% endif %}
                 </td>
             </tr>
